[gd_scene load_steps=21 format=3 uid="uid://wa6ticmc1kvn"]

[ext_resource type="Texture2D" uid="uid://cdqmupaivnhvt" path="res://assets/ui/BG.png" id="1_tahfu"]
[ext_resource type="FontFile" uid="uid://jss3joppgef5" path="res://assets/fonts/lucasarts-scumm-outline.fnt" id="2_mli57"]
[ext_resource type="Texture2D" uid="uid://eeu2odwtlawx" path="res://assets/ui/Sprite_png/skin select button.png" id="3_616yh"]
[ext_resource type="Script" uid="uid://b31sdvj84sjhh" path="res://scripts/Ui_scripts/avatar.gd" id="4_nufh0"]
[ext_resource type="Texture2D" uid="uid://bjv8xwoitvrqp" path="res://assets/ui/Sprite_png/exit button.png" id="5_kefff"]
[ext_resource type="Script" uid="uid://dy62ud0wtjcr" path="res://scripts/Ui_scripts/exit.gd" id="6_iuymg"]
[ext_resource type="Texture2D" uid="uid://pai7ijfk1624" path="res://assets/ui/Sprite_png/play button.png" id="7_sd2jr"]
[ext_resource type="Script" uid="uid://ccbpcqcflanyi" path="res://scripts/Ui_scripts/play.gd" id="8_e11ec"]
[ext_resource type="PackedScene" uid="uid://ce7pirr3uftn0" path="res://scenes/UI_Scene/progress_bar.tscn" id="9_tahfu"]
[ext_resource type="AudioStream" uid="uid://cjealb8sgcgua" path="res://assets/sounds/fanfare.wav" id="10_tahfu"]
[ext_resource type="AudioStream" uid="uid://bdmf3382te8dp" path="res://assets/sounds/001_Hover_01.wav" id="11_w4ide"]
[ext_resource type="AudioStream" uid="uid://cjcnqrxa8wkw6" path="res://assets/sounds/051_use_item_01.wav" id="12_baodq"]

[sub_resource type="FontVariation" id="FontVariation_u80x2"]
base_font = ExtResource("2_mli57")
spacing_glyph = 20

[sub_resource type="Animation" id="Animation_kdmts"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bodal"]
resource_name = "color_cycle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 0.566667, 0.966667, 1.43333, 1.86667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.980392, 0.803922, 1), Color(0.529412, 0.807843, 0.980392, 1), Color(0.972549, 0.513726, 0.47451, 1), Color(0.0822495, 0.772635, 0.66515, 1), Color(0.854902, 0.439216, 0.839216, 1)]
}

[sub_resource type="Animation" id="Animation_u80x2"]
resource_name = "float"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0auqf"]
_data = {
&"RESET": SubResource("Animation_kdmts"),
&"color_cycle": SubResource("Animation_bodal"),
&"float": SubResource("Animation_u80x2")
}

[sub_resource type="Animation" id="Animation_y16t7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(475, 75)]
}

[sub_resource type="Animation" id="Animation_0auqf"]
resource_name = "flaot"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(475, 75), Vector2(475, 100), Vector2(475, 75), Vector2(475, 50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ge6i"]
_data = {
&"RESET": SubResource("Animation_y16t7"),
&"flaot": SubResource("Animation_0auqf")
}

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("1_tahfu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -34.0
offset_top = -27.0
offset_right = 1196.0
offset_bottom = 690.0
color = Color(0, 0, 0, 0.572549)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 75.0
offset_right = 1081.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0.623555, 0.931844, 0.717806, 1)
theme_override_colors/font_shadow_color = Color(0.601664, 0.452765, 0.303545, 1)
theme_override_colors/font_outline_color = Color(0.787124, 0.159285, 0.635532, 1)
theme_override_fonts/font = SubResource("FontVariation_u80x2")
theme_override_font_sizes/font_size = 200
text = "ECO-
QUEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleLabel"]
libraries = {
&"": SubResource("AnimationLibrary_0auqf")
}
autoplay = "color_cycle"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="TitleLabel"]
libraries = {
&"": SubResource("AnimationLibrary_4ge6i")
}
autoplay = "flaot"

[node name="Avatar" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 457.0
offset_right = 846.0
offset_bottom = 562.0
texture_normal = ExtResource("3_616yh")
stretch_mode = 0
script = ExtResource("4_nufh0")

[node name="Exit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 906.0
offset_top = 458.0
offset_right = 1031.0
offset_bottom = 561.0
texture_normal = ExtResource("5_kefff")
stretch_mode = 0
script = ExtResource("6_iuymg")

[node name="Play" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 456.0
offset_right = 654.0
offset_bottom = 562.0
texture_normal = ExtResource("7_sd2jr")
stretch_mode = 0
script = ExtResource("8_e11ec")

[node name="ProgressBar" parent="." instance=ExtResource("9_tahfu")]
visible = false
layout_mode = 0
offset_left = 158.0
offset_top = 473.0
offset_right = 1044.0
offset_bottom = 561.0

[node name="StartBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_tahfu")
volume_db = 1.224
autoplay = true

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_w4ide")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_baodq")

[connection signal="mouse_entered" from="Avatar" to="Avatar" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Avatar" to="Avatar" method="_on_mouse_exited"]
[connection signal="pressed" from="Avatar" to="Avatar" method="_on_pressed"]
[connection signal="mouse_entered" from="Exit" to="Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="Exit" method="_on_mouse_exited"]
[connection signal="pressed" from="Exit" to="Exit" method="_on_pressed"]
[connection signal="mouse_entered" from="Play" to="Play" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="Play" method="_on_mouse_exited"]
[connection signal="pressed" from="Play" to="Play" method="_on_pressed"]
